# subscription-service

./: alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: subscriptions.py  users.py
app/core/: config.py
app/db/: session.py
app/models/: subscriptions.py  user.py
app/schemas/: subscription.py  user.py
app/services/: security.py  subscriptions_service.py  users.py
migrations/: env.py
migrations/versions/: 2c2ebfd36acd_initial_migration.py
