[tool.poetry]
name = "subscriptions"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
pytest = "^8.3.3"
uvicorn = "^0.32.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
